# MCP-Server-Scanner

./: .gitignore  README.md  advertise.py  calculator_server.py  leetcode.py  mcpScanner.py  pyproject.toml
.github/workflows/: ci.yml
calculator mcp/: README.md  calculator_server.py  mdns_advertise.py
docs/: architecture.md
mcp-discovery-ui/: README.md  package-lock.json  package.json
mcp-discovery-ui/src/app/: globals.css  layout.js  page.js
mcp-discovery-ui/src/app/api/chat/: route.js
mcp-discovery-ui/src/app/api/config/: route.js
mcp-discovery-ui/src/app/api/discover/: route.js
mcp-discovery-ui/src/app/api/proxy/: route.js
mcp-discovery-ui/src/app/api/test/: route.js
mcp_scanner/: __init__.py  cli.py
mcp_scanner/checks/: __init__.py  base.py  security.py
mcp_scanner/core/: __init__.py  scanner.py
mcp_scanner/models/: __init__.py  schemas.py
mcp_scanner/protocols/: __init__.py  sse.py  stdio.py  websocket.py
mcp_scanner/utils/: __init__.py  helpers.py
tests/: __init__.py  conftest.py  test_cli.py  test_scanner.py
todo mcp/: README.md  mdns_advertise.py  requirements.txt  todo_server.py
